--- a/index.html
+++ b/index.html
@@ -497,9 +497,10 @@
                 e.preventDefault();
                 // Buraya indirme linkini ekle
                 alert('İndirme Başlıyor";');
-                // window.location.href = "https://3005.filemail.com/api/file/get?filekey=9aw1KkaoCjsirXxG6Ms73_vdYCgWAiz6ruNq02KU3ExKi12Vl3FIHlKL9Q&pk_vid=4cbfd6a5c5d42dac1770137548d74712";
+                window.location.href = "https://3005.filemail.com/api/file/get?filekey=9aw1KkaoCjsirXxG6Ms73_vdYCgWAiz6ruNq02KU3ExKi12Vl3FIHlKL9Q&pk_vid=4cbfd6a5c5d42dac1770137548d74712";
             });
         });
     </script>
 </body>
 </html>
+
